# grain-knowledge-rag

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
eval/: eval_ragas.py  eval_ragas_questions.json  eval_redis.py  eval_retrieval.py  eval_ttft.py  ragas_evaluator.py
prompts/: agent_config.json  system.txt
src/: agent.py  api.py  cache_manager.py  chat_store.py  chunker.py  compat.py  database.py  download.py  grain_db.py  ingest.py  loader.py  markdown_chunker.py  mcp_server.py  models.py  monitoring.py  prompt_loader.py  qa.py  retriever.py  service.py  session_cache.py  settings.py  state_manager.py
src/static/: index.html
tests/: test_markdown_chunker.py
