[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "docx2txt>=0.9",
    "fastapi>=0.136.1",
    "huggingface-hub>=1.14.0",
    "jieba>=0.42.1",
    "langchain>=1.3.0",
    "langchain-openai>=1.2.1",
    "llama-index>=0.14.21",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-llms-openai-like>=0.7.2",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-chroma>=0.5.5",
    "llama-index-vector-stores-faiss>=0.6.0",
    "llama-index-vector-stores-milvus>=1.1.0",
    "milvus-lite>=3.0",
    "paddlepaddle>=3.3.1",
    "pymilvus[milvus-lite]>=2.6.13",
    "pymupdf>=1.27.2.3",
    "paddleocr>=2.10.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.3",
    "sqlalchemy[asyncio]>=2.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "rank-bm25>=0.2.2",
    "redis>=5.0.0",
    "sentence-transformers>=5.5.0",
    "uvicorn>=0.46.0",
    "mcp[cli]>=1.0.0",
    "ragas>=0.4.0",
    "tqdm>=4.0.0",
    "langchain-google-vertexai>=3.2.3",
    "langchain-mcp-adapters>=0.2.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
